--- a/frameworks/runtime-src/proj.win32/framework.vcxproj
+++ b/frameworks/runtime-src/proj.win32/framework.vcxproj
@@ -216,6 +216,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Game\BehaviorTree\BTParam.h" />
     <ClInclude Include="..\Classes\Game\BehaviorTree\BTPrecondition.h" />
     <ClInclude Include="..\Classes\Game\BehaviorTree\BTReader.h" />
+    <ClInclude Include="..\Classes\Game\Helper\DebugInfo.h" />
     <ClInclude Include="..\Classes\Game\Helper\Display.h" />
     <ClInclude Include="..\Classes\Game\Helper\Utils.h" />
     <ClInclude Include="..\Classes\Runtime.h" />
@@ -253,6 +254,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Game\BehaviorTree\BTNodeSequence.cpp" />
     <ClCompile Include="..\Classes\Game\BehaviorTree\BTPrecondition.cpp" />
     <ClCompile Include="..\Classes\Game\BehaviorTree\BTReader.cpp" />
+    <ClCompile Include="..\Classes\Game\Helper\DebugInfo.cpp" />
     <ClCompile Include="..\Classes\Game\Helper\Display.cpp" />
     <ClCompile Include="..\Classes\Game\Helper\Utils.cpp" />
     <ClCompile Include="..\Classes\Game\tolua\lua_cocos2dx_userext.cpp" />
