--- a/frameworks/runtime-src/proj.win32/framework.vcxproj.filters
+++ b/frameworks/runtime-src/proj.win32/framework.vcxproj.filters
@@ -25,6 +25,15 @@
     <Filter Include="Game\Helper">
       <UniqueIdentifier>{e5839f73-417c-47a1-9391-a597b8d2da85}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Battle\Behavior">
+      <UniqueIdentifier>{441fd4cc-6014-4272-94c5-a5c084b1ca70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\Battle\Object">
+      <UniqueIdentifier>{c90a213f-b5b5-4ba8-857a-71069a521364}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\Battle\Map">
+      <UniqueIdentifier>{1cd6d64d-bb3b-4f5d-95d5-ccfa915b30e9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h">
@@ -85,38 +94,8 @@
     <ClInclude Include="..\Classes\Game\BehaviorTree\BTDef.h">
       <Filter>Game\BehaviorTree</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\BattleScene.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Game\Helper\Display.h">
       <Filter>Game\Helper</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\BlackBoard.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\BehaviorComponent.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\NOD_Attack.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\NOD_Idle.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\CON_EnemyCanAttack.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\CON_FoundEnemy.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\CON_ReachedBattleField.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\NOD_MoveToBattleField.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\GameEntity.h">
-      <Filter>Game\Battle</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Game\BehaviorTree\BTDebugRenderer.h">
       <Filter>Game\BehaviorTree</Filter>
@@ -127,20 +106,53 @@
     <ClInclude Include="..\Classes\Game\Helper\Utils.h">
       <Filter>Game\Helper</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\NOD_MoveToAttack.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\NOD_Die.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\CON_HP0.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Game\Battle\AStar.h">
-      <Filter>Game\Battle</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Game\Helper\DebugInfo.h">
       <Filter>Game\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\CON_EnemyCanAttack.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\CON_FoundEnemy.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\CON_HP0.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\CON_ReachedBattleField.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\NOD_Attack.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\NOD_Die.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\NOD_Idle.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\NOD_MoveToAttack.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\NOD_MoveToBattleField.h">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\BattleScene.h">
+      <Filter>Game\Battle\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\BehaviorComponent.h">
+      <Filter>Game\Battle\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\BlackBoard.h">
+      <Filter>Game\Battle\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\GameEntity.h">
+      <Filter>Game\Battle\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\MapManager.h">
+      <Filter>Game\Battle\Map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Game\Battle\PathFinder.h">
+      <Filter>Game\Battle\Map</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -195,41 +207,11 @@
     <ClCompile Include="..\Classes\Game\BehaviorTree\BTNodeAction.cpp">
       <Filter>Game\BehaviorTree</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\BattleScene.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Game\tolua\lua_cocos2dx_userext.cpp">
       <Filter>Game\tolua</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Game\Helper\Display.cpp">
       <Filter>Game\Helper</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\BlackBoard.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\BehaviorComponent.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\NOD_Idle.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\CON_EnemyCanAttack.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\CON_FoundEnemy.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\NOD_Attack.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\CON_ReachedBattleField.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\NOD_MoveToBattleField.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\GameEntity.cpp">
-      <Filter>Game\Battle</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Game\BehaviorTree\BTDebugRenderer.cpp">
       <Filter>Game\BehaviorTree</Filter>
@@ -240,20 +222,53 @@
     <ClCompile Include="..\Classes\Game\Helper\Utils.cpp">
       <Filter>Game\Helper</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\NOD_MoveToAttack.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\NOD_Die.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\CON_HP0.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Game\Battle\AStar.cpp">
-      <Filter>Game\Battle</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Game\Helper\DebugInfo.cpp">
       <Filter>Game\Helper</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\CON_EnemyCanAttack.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\CON_FoundEnemy.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\CON_HP0.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\CON_ReachedBattleField.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\NOD_Attack.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\NOD_Die.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\NOD_Idle.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\NOD_MoveToAttack.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\NOD_MoveToBattleField.cpp">
+      <Filter>Game\Battle\Behavior</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\BattleScene.cpp">
+      <Filter>Game\Battle\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\BehaviorComponent.cpp">
+      <Filter>Game\Battle\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\BlackBoard.cpp">
+      <Filter>Game\Battle\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\GameEntity.cpp">
+      <Filter>Game\Battle\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\MapManager.cpp">
+      <Filter>Game\Battle\Map</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Game\Battle\PathFinder.cpp">
+      <Filter>Game\Battle\Map</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -274,7 +289,7 @@
     <None Include="..\Classes\Game\tolua\tolua_builder.lua">
       <Filter>Game\tolua</Filter>
     </None>
-    <None Include="..\Classes\Game\tolua\BattleScene.pkg">
+    <None Include="..\Classes\Game\tolua\MapManager.pkg">
       <Filter>Game\tolua</Filter>
     </None>
   </ItemGroup>
