加入定点数，代码重构

--- a/frameworks/runtime-src/proj.win32/framework.vcxproj
+++ b/frameworks/runtime-src/proj.win32/framework.vcxproj
@@ -189,6 +189,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\ConfigParser.h" />
     <ClInclude Include="..\Classes\Game\Base\BitStream.h" />
     <ClInclude Include="..\Classes\Game\Base\EventDef.h" />
+    <ClInclude Include="..\Classes\Game\Base\Fixed.h" />
     <ClInclude Include="..\Classes\Game\Base\ITickable.h" />
     <ClInclude Include="..\Classes\Game\Base\Log.h" />
     <ClInclude Include="..\Classes\Game\Base\LuaValueList.h" />
@@ -200,17 +201,23 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Game\Base\Sys.h" />
     <ClInclude Include="..\Classes\Game\Base\ThreadManager.h" />
     <ClInclude Include="..\Classes\Game\Base\ThreadObj.h" />
+    <ClInclude Include="..\Classes\Game\Battle\GameLogic.h" />
+    <ClInclude Include="..\Classes\Game\Battle\GameObject.h" />
+    <ClInclude Include="..\Classes\Game\Battle\GameObjectManager.h" />
+    <ClInclude Include="..\Classes\Game\Battle\GameObjectMacros.h" />
+    <ClInclude Include="..\Classes\Game\Battle\GameObjectView.h" />
     <ClInclude Include="..\Classes\Game\Battle\LogicFrame.h" />
+    <ClInclude Include="..\Classes\Game\Battle\MapData.h" />
+    <ClInclude Include="..\Classes\Game\Battle\MapStructs.h" />
+    <ClInclude Include="..\Classes\Game\Battle\MapManager.h" />
+    <ClInclude Include="..\Classes\Game\Battle\MapView.h" />
     <ClInclude Include="..\Classes\Game\Battle\MessageDef.h" />
     <ClInclude Include="..\Classes\Game\Battle\PathFinder.h" />
-    <ClInclude Include="..\Classes\Game\Battle\BehaviorComponent.h" />
     <ClInclude Include="..\Classes\Game\Battle\BlackBoard.h" />
     <ClInclude Include="..\Classes\Game\Battle\CON_EnemyCanAttack.h" />
     <ClInclude Include="..\Classes\Game\Battle\CON_FoundEnemy.h" />
     <ClInclude Include="..\Classes\Game\Battle\CON_HP0.h" />
     <ClInclude Include="..\Classes\Game\Battle\CON_ReachedBattleField.h" />
-    <ClInclude Include="..\Classes\Game\Battle\GameEntity.h" />
-    <ClInclude Include="..\Classes\Game\Battle\MapManager.h" />
     <ClInclude Include="..\Classes\Game\Battle\NOD_Attack.h" />
     <ClInclude Include="..\Classes\Game\Battle\NOD_Die.h" />
     <ClInclude Include="..\Classes\Game\Battle\NOD_Idle.h" />
@@ -245,6 +252,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\ConfigParser.cpp" />
     <ClCompile Include="..\Classes\Game\Base\BitStream.cpp" />
+    <ClCompile Include="..\Classes\Game\Base\Fixed.cpp" />
     <ClCompile Include="..\Classes\Game\Base\Log.cpp" />
     <ClCompile Include="..\Classes\Game\Base\NetImp.cpp" />
     <ClCompile Include="..\Classes\Game\Base\NetManager.cpp" />
@@ -253,16 +261,21 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Game\Base\Sys.cpp" />
     <ClCompile Include="..\Classes\Game\Base\ThreadManager.cpp" />
     <ClCompile Include="..\Classes\Game\Base\ThreadObj.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\GameLogic.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\GameObject.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\GameObjectManager.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\GameObjectView.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\LogicFrame.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\MapData.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\MapStructs.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\MapManager.cpp" />
+    <ClCompile Include="..\Classes\Game\Battle\MapView.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\PathFinder.cpp" />
-    <ClCompile Include="..\Classes\Game\Battle\BehaviorComponent.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\BlackBoard.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\CON_EnemyCanAttack.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\CON_FoundEnemy.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\CON_HP0.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\CON_ReachedBattleField.cpp" />
-    <ClCompile Include="..\Classes\Game\Battle\GameEntity.cpp" />
-    <ClCompile Include="..\Classes\Game\Battle\MapManager.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\NOD_Attack.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\NOD_Die.cpp" />
     <ClCompile Include="..\Classes\Game\Battle\NOD_Idle.cpp" />
