--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "init_cfg": {
-    "isLandscape": false,
+    "isLandscape": true,
     "name": "LinkWar",
-    "width": 640,
-    "height": 960,
+    "width": 960,
+    "height": 640,
     "entry": "src/main.lua"
   },
   "simulator_screen_size": [
